Update composer.json with Stable

--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,6 @@
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
