--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kambo/langchain",
+    "name": "stanrevko/langchain",
     "description": " ⚡ Building applications with LLMs through composability in PHP ⚡ ",
     "keywords": [
         "kambo",
